--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,22 @@
 .jumbotron {
+  color: white;
   text-align: center;
+  background-image: url(https://media.giphy.com/media/cJpgv7QNkxWNUZ4hLo/giphy.gif);
 }
 
 #pizza-btn {
   display: inline-block;
-  border-radius: 50%;
+  border-radius: 70rem 60rem 60rem 70rem;
   padding: 20px;
   width: 90px;
-  height: 75px; 
+  height: 90px; 
   font-size: 16px;
   text-align: center;
   margin: 4px 2px;
+  background-image: url(../img/pizza-circle.jpeg);
+  background-size: 100%;
+  color: white;
+  border: none;
 }
 
 #pizza-total {
