--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
   background-image: url(https://media.giphy.com/media/cJpgv7QNkxWNUZ4hLo/giphy.gif);
 }
 
-#another-pizza {
+#checkout, #place-order, #another-pizza {
   display: inline-block;
   border-radius: 70rem 60rem 60rem 70rem;
   padding: 20px;
@@ -19,25 +19,16 @@
   border: none;
 }
 
-#place-order {
-  display: inline-block;
-  border-radius: 70rem 60rem 60rem 70rem;
-  padding: 20px;
-  width: 90px;
-  height: 90px; 
-  font-size: 16px;
-  text-align: center;
-  margin: 4px 2px;
-  background-image: url(../img/pizza-circle.jpeg);
-  background-size: 100%;
-  color: white;
-  border: none;
-}
 
 #pizza-receipt {
   display: none;
 }
 
+#order-info {
+  display: none;
+}
+
 body {
   background: linear-gradient(180deg,  #d9e7ff 0%, #e3ffe7 100%);
+  padding-bottom: 60px;
 }
